--- a/app/src/main/res/layout/config.xml
+++ b/app/src/main/res/layout/config.xml
@@ -6,245 +6,180 @@
     android:layout_height="match_parent">
 
 
-    <TextView
-        android:id="@+id/player_name_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:labelFor="@+id/input_name"
-        android:text="@string/player_name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/input_name"
-        app:layout_constraintHorizontal_bias="0.566"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.238" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/input_name"
-        android:layout_width="137dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginBottom="8dp"
-        android:importantForAutofill="no"
-        android:inputType="text"
-        android:text="@string/input_name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.226" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
+            <TextView
+                android:id="@+id/player_name_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:labelFor="@+id/input_name"
+                android:text="@string/player_name" />
 
-    <Spinner
-        android:id="@+id/difficulty_spinner"
-        android:layout_width="395dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="253dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subtract_engineer_skill_button" />
+            <EditText
+                android:id="@+id/input_name"
+                android:layout_width="137dp"
+                android:layout_height="39dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="136dp"
+                android:layout_marginBottom="8dp"
+                android:importantForAutofill="no"
+                android:inputType="text"
+                android:hint="@string/input_name" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/difficulty_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="217dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/difficulty_label"
-        app:layout_constraintBottom_toTopOf="@+id/difficulty_spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.085"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_name"
-        app:layout_constraintVertical_bias="1.0" />
+        <TextView
+            android:id="@+id/difficulty_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/difficulty_label"
+            />
+        <Spinner
+            android:id="@+id/difficulty_spinner"
+            android:layout_width="395dp"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/set_skills_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Set Skillpoints" />
 
-    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:paddingLeft="16dp"-->
-    <!--android:paddingRight="16dp"-->
-    <!--android:orientation="vertical" >-->
-    <TextView
-        android:id="@+id/set_skills_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="223dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="9dp"
-        android:text="Set Skillpoints"
-        app:layout_constraintBottom_toTopOf="@+id/subtract_pilot_skill_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.088"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
-    <TextView
-        android:id="@+id/pilot_skill_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="39dp"
-        android:layout_marginEnd="47dp"
-        android:layout_marginBottom="9dp"
-        android:text="Pilot"
-        app:layout_constraintBottom_toTopOf="@+id/subtract_fighter_skill_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/add_pilot_skill_button"
-        app:layout_constraintHorizontal_bias="0.084"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subtract_pilot_skill_button" />
+            <TextView
+                android:id="@+id/pilot_skill_label"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Pilot" />
 
-    <TextView
-        android:id="@+id/fighter_skill_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="20dp"
-        android:text="Fighter"
-        app:layout_constraintBottom_toTopOf="@+id/subtract_trader_skill_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/add_fighter_skill_button"
-        app:layout_constraintHorizontal_bias="0.068"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subtract_fighter_skill_button" />
+            <Button
+                android:id="@+id/add_pilot_skill_button"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:text="@string/plus" />
+            <TextView
+                android:id="@+id/pilot_skill_tracker"
+                android:layout_width="36dp"
+                android:layout_height="36dp" />
 
-    <TextView
-        android:id="@+id/trader_skill_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="21dp"
-        android:text="Trader"
-        app:layout_constraintBottom_toTopOf="@+id/engineer_skill_label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/add_trader_skill_button"
-        app:layout_constraintHorizontal_bias="0.076"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subtract_trader_skill_button" />
+            <Button
+                android:id="@+id/subtract_pilot_skill_button"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:text="@string/minus" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/engineer_skill_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="15dp"
-        android:text="Engineer"
-        app:layout_constraintBottom_toTopOf="@+id/subtract_engineer_skill_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/add_engineer_skill_button"
-        app:layout_constraintHorizontal_bias="0.047"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/trader_skill_label" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
-    <!--<Button-->
-    <!--android:id="@+id/add_pilot_skill_button"-->
-    <!--android:layout_width="0dp"-->
-    <!--android:layout_height="34dp"-->
-    <!--android:layout_marginEnd="34dp"-->
-    <!--android:text="+"-->
-    <!--app:layout_constraintEnd_toStartOf="@+id/subtract_pilot_skill_button"-->
-    <!--app:layout_constraintStart_toEndOf="@+id/pilot_skill_label" />-->
-    <!--&lt;!&ndash;app:layout_constraintBaseline_toBaselineOf="@+id/add_pilot_skill_button2"&ndash;&gt;-->
+            <TextView
+                android:id="@+id/fighter_skill_label"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Fighter" />
 
-    <!--</LinearLayout>-->
+            <Button
+                android:id="@+id/add_fighter_skill_button"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:text="@string/plus" />
 
-    <Button
-        android:id="@+id/add_pilot_skill_button"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:text="@string/plus"
-        tools:layout_editor_absoluteX="95dp"
-        tools:layout_editor_absoluteY="254dp" />
+            <TextView
+                android:id="@+id/fighter_skill_tracker"
+                android:layout_width="36dp"
+                android:layout_height="36dp" />
+            <Button
+                android:id="@+id/subtract_fighter_skill_button"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:text="@string/minus" />
 
-    <Button
-        android:id="@+id/subtract_pilot_skill_button"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="190dp"
-        android:text="@string/minus"
-        app:layout_constraintBottom_toTopOf="@+id/pilot_skill_label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.851"
-        app:layout_constraintStart_toEndOf="@+id/add_pilot_skill_button"
-        app:layout_constraintTop_toBottomOf="@+id/set_skills_label" />
+        </LinearLayout>
 
-    <Button
-        android:id="@+id/add_fighter_skill_button"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="51dp"
-        android:layout_marginEnd="46dp"
-        android:layout_marginBottom="51dp"
-        android:text="@string/plus"
-        app:layout_constraintBottom_toBottomOf="@+id/add_trader_skill_button"
-        app:layout_constraintEnd_toStartOf="@+id/subtract_fighter_skill_button"
-        app:layout_constraintStart_toEndOf="@+id/fighter_skill_label"
-        app:layout_constraintTop_toBottomOf="@+id/set_skills_label" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
-    <Button
-        android:id="@+id/subtract_fighter_skill_button"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="198dp"
-        android:text="@string/minus"
-        app:layout_constraintBottom_toTopOf="@+id/fighter_skill_label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/add_fighter_skill_button"
-        app:layout_constraintTop_toBottomOf="@+id/pilot_skill_label" />
+            <TextView
+                android:id="@+id/trader_skill_label"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Trader" />
+            <Button
+                android:id="@+id/add_trader_skill_button"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:text="@string/plus" />
 
-    <Button
-        android:id="@+id/add_trader_skill_button"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="43dp"
-        android:text="@string/plus"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/subtract_trader_skill_button"
-        app:layout_constraintStart_toEndOf="@+id/trader_skill_label"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.614" />
+            <TextView
+                android:id="@+id/trader_skill_tracker"
+                android:layout_width="36dp"
+                android:layout_height="36dp" />
+            <Button
+                android:id="@+id/subtract_trader_skill_button"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:text="@string/minus" />
 
-    <Button
-        android:id="@+id/subtract_trader_skill_button"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="198dp"
-        android:text="@string/minus"
-        app:layout_constraintBottom_toTopOf="@+id/trader_skill_label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/add_trader_skill_button"
-        app:layout_constraintTop_toBottomOf="@+id/fighter_skill_label" />
+        </LinearLayout>
 
-    <Button
-        android:id="@+id/add_engineer_skill_button"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="54dp"
-        android:text="@string/plus"
-        app:layout_constraintBottom_toBottomOf="@+id/engineer_skill_label"
-        app:layout_constraintEnd_toStartOf="@+id/subtract_engineer_skill_button"
-        app:layout_constraintStart_toEndOf="@+id/engineer_skill_label"
-        app:layout_constraintTop_toBottomOf="@+id/engineer_skill_label" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
-    <Button
-        android:id="@+id/subtract_engineer_skill_button"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="190dp"
-        android:text="@string/minus"
-        app:layout_constraintBottom_toTopOf="@+id/difficulty_spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/add_engineer_skill_button" />
+            <TextView
+                android:id="@+id/engineer_skill_label"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Engineer" />
+            <Button
+                android:id="@+id/add_engineer_skill_button"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:text="@string/plus" />
 
+            <TextView
+                android:id="@+id/engineer_skill_tracker"
+                android:layout_width="36dp"
+                android:layout_height="36dp" />
+            <Button
+                android:id="@+id/subtract_engineer_skill_button"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:text="@string/minus" />
+
+        </LinearLayout>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
