--- a/app/src/main/res/layout/config.xml
+++ b/app/src/main/res/layout/config.xml
@@ -179,7 +179,19 @@
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:text="@string/minus" />
-
         </LinearLayout>
+        <RelativeLayout android:id="@+id/RelativeLayout01"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            xmlns:android="http://schemas.android.com/apk/res/android">
+
+            <Button
+                android:id="@+id/submit_player_info_button"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true"
+                android:text="@string/submit"/>
+        </RelativeLayout>
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
