--- a/app/src/main/res/layout/start_activity.xml
+++ b/app/src/main/res/layout/start_activity.xml
@@ -39,7 +39,7 @@
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/recyclerView"
+        android:id="@+id/marketInfoRecycler"
         android:layout_width="279dp"
         android:layout_height="322dp"
         tools:context=".MainActivity"
