--- a/app/src/main/res/layout/planet_activity.xml
+++ b/app/src/main/res/layout/planet_activity.xml
@@ -5,12 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/market_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Market"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="29dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp"
+        tools:layout_editor_absoluteX="37dp"
+        tools:layout_editor_absoluteY="35dp">
+        <Button
+            android:id="@+id/market_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Market"
+            tools:layout_editor_absoluteX="32dp"
+            tools:layout_editor_absoluteY="29dp" />
+
+        <TextView
+            android:id="@+id/planet_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Current Planet: "
+            tools:layout_editor_absoluteX="60dp"
+            tools:layout_editor_absoluteY="29dp" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
