--- a/app/src/main/res/layout/cargo_activity.xml
+++ b/app/src/main/res/layout/cargo_activity.xml
@@ -44,10 +44,10 @@
             <android.support.v7.widget.RecyclerView
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/marketInfoRecycler"
+                android:id="@+id/cargoRecycler"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                tools:context=".StartActivity"
+                tools:context=".CargoActivity"
                 tools:layout_editor_absoluteX="32dp"
                 tools:layout_editor_absoluteY="62dp"
                 tools:listitem="@layout/market_item" />
