--- a/app/src/main/res/layout/market_item.xml
+++ b/app/src/main/res/layout/market_item.xml
@@ -2,9 +2,11 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp">
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -15,31 +17,42 @@
             android:id="@+id/text_market_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Market Item"
             android:layout_alignParentTop="true"
+            android:text="Market Item"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
             android:id="@+id/text_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:text="Quantity: ###"
             android:layout_toLeftOf="@+id/text_price"
-            android:paddingEnd="25dp"/>
+            android:maxLines="1"
+            android:paddingEnd="25dp"
+            android:text="Quantity: ###" />
 
         <TextView
             android:id="@+id/text_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Price: ####"
-            android:maxLines="1"
             android:layout_alignParentEnd="true"
+            android:maxLines="1"
             android:paddingEnd="16dp"
-            />
-
+            android:text="Price: ####" />
 
 
     </RelativeLayout>
+
+    <LinearLayout
+        android:layout_height="8dp"
+        android:layout_width="8dp"
+        android:layout_gravity="center">
+
+        <Button
+            android:id="@+id/buy_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Buy" />
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
