--- a/app/src/main/res/layout/market_item.xml
+++ b/app/src/main/res/layout/market_item.xml
@@ -29,25 +29,50 @@
 
         <TextView
             android:id="@+id/text_name"
-            android:layout_width="96dp"
+            android:layout_width="wrap_content"
+            android:layout_height="19dp"
+            android:layout_marginTop="76dp"
+            android:layout_marginBottom="76dp"
+            android:maxLines="1"
+            android:paddingEnd="15dp"
+            android:text="Item Name"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="37dp" />
+
+        <TextView
+            android:id="@+id/text_price_label"
+            android:layout_width="wrap_content"
             android:layout_height="19dp"
             android:layout_marginTop="76dp"
             android:maxLines="1"
-            android:paddingEnd="25dp"
-            android:text="Name: ####"
+            android:paddingEnd="15dp"
+            android:text="Price"
+            app:layout_constraintLeft_toRightOf="@+id/text_name"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="37dp" />
 
         <TextView
             android:id="@+id/text_price"
-            android:layout_width="96dp"
+            android:layout_width="wrap_content"
             android:layout_height="19dp"
             android:layout_marginTop="76dp"
             android:maxLines="1"
-            android:paddingEnd="25dp"
-            android:text="Price: ####"
-            app:layout_constraintRight_toLeftOf="@+id/text_quantity"
+            android:paddingEnd="15dp"
+            android:text="##"
+            app:layout_constraintLeft_toRightOf="@+id/text_price_label"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/text_quan_label"
+            android:layout_width="wrap_content"
+            android:layout_height="19dp"
+            android:layout_marginTop="76dp"
+            android:maxLines="1"
+            android:paddingEnd="15dp"
+            android:text="Quantity"
+            app:layout_constraintRight_toLeftOf="@+id/text_quantity"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="37dp" />
 
         <TextView
             android:id="@+id/text_quantity"
@@ -56,53 +81,62 @@
             android:layout_marginTop="76dp"
             android:layout_marginEnd="4dp"
             android:maxLines="1"
-            android:paddingEnd="16dp"
-            android:text="Total Quantity: ####"
+            android:text="##"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/text_quantity_desired"
-            android:layout_width="60dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:paddingBottom="20dp"
             android:text="Quantity to buy"
-            tools:layout_editor_absoluteX="63dp"
-            tools:layout_editor_absoluteY="168dp" />
+            app:layout_constraintTop_toBottomOf="@id/text_name" />
 
         <Button
             android:id="@+id/increase_quantity_button"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:text="@string/plus"
-            tools:layout_editor_absoluteX="127dp"
-            tools:layout_editor_absoluteY="168dp" />
+            app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
+            app:layout_constraintLeft_toRightOf="@id/text_quantity_desired" />
 
         <TextView
             android:id="@+id/quantity_tracker"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            tools:layout_editor_absoluteX="170dp"
-            tools:layout_editor_absoluteY="168dp" />
+            app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
+            app:layout_constraintLeft_toRightOf="@+id/increase_quantity_button" />
 
         <Button
             android:id="@+id/decrease_quantity_button"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:text="@string/minus"
-            tools:layout_editor_absoluteX="211dp"
-            tools:layout_editor_absoluteY="168dp" />
+            app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
+            app:layout_constraintLeft_toRightOf="@id/quantity_tracker" />
+
+        <TextView
+            android:id="@+id/text_total_price_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:paddingTop="25dp"
+            android:paddingEnd="16dp"
+            android:text="Total Price: "
+            app:layout_constraintTop_toBottomOf="@id/text_quantity_desired" />
 
         <TextView
             android:id="@+id/text_total_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="260dp"
-            android:layout_marginEnd="124dp"
             android:maxLines="1"
+            android:paddingTop="25dp"
             android:paddingEnd="16dp"
-            android:text="Total Price: ####"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="##"
+            app:layout_constraintTop_toTopOf="@id/text_total_price_label"
+            app:layout_constraintLeft_toRightOf="@id/text_total_price_label" />
 
         <Button
             android:id="@+id/buy_button"
@@ -113,12 +147,8 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="Buy"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.529"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.484" />
+            app:layout_constraintLeft_toRightOf="@id/text_total_price"
+            app:layout_constraintTop_toBottomOf="@id/text_quantity_desired"/>
 
 
     </android.support.constraint.ConstraintLayout>
