--- a/app/src/main/res/layout/market_item.xml
+++ b/app/src/main/res/layout/market_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="8dp">
+
 
         <TextView
             android:id="@+id/text_market_item_name"
@@ -28,18 +29,6 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/text_name"
-            android:layout_width="wrap_content"
-            android:layout_height="19dp"
-            android:layout_marginTop="76dp"
-            android:layout_marginBottom="76dp"
-            android:maxLines="1"
-            android:paddingEnd="15dp"
-            android:text="Item Name"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="37dp" />
-
-        <TextView
             android:id="@+id/text_price_label"
             android:layout_width="wrap_content"
             android:layout_height="19dp"
@@ -47,7 +36,6 @@
             android:maxLines="1"
             android:paddingEnd="15dp"
             android:text="Price"
-            app:layout_constraintLeft_toRightOf="@+id/text_name"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="37dp" />
 
@@ -92,13 +80,13 @@
             android:paddingTop="8dp"
             android:paddingBottom="20dp"
             android:text="Quantity to buy"
-            app:layout_constraintTop_toBottomOf="@id/text_name" />
+            app:layout_constraintTop_toBottomOf="@id/text_price_label" />
 
         <Button
             android:id="@+id/increase_quantity_button"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:text="@string/plus"
+            android:text="+"
             app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
             app:layout_constraintLeft_toRightOf="@id/text_quantity_desired" />
 
@@ -106,6 +94,7 @@
             android:id="@+id/quantity_tracker"
             android:layout_width="36dp"
             android:layout_height="36dp"
+            android:text="0"
             app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
             app:layout_constraintLeft_toRightOf="@+id/increase_quantity_button" />
 
@@ -134,19 +123,19 @@
             android:maxLines="1"
             android:paddingTop="25dp"
             android:paddingEnd="16dp"
-            android:text="##"
+            android:text="0"
             app:layout_constraintTop_toTopOf="@id/text_total_price_label"
             app:layout_constraintLeft_toRightOf="@id/text_total_price_label" />
 
         <Button
-            android:id="@+id/buy_button"
+            android:id="@+id/transaction_button"
             android:layout_width="105dp"
             android:layout_height="51dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Buy"
+            android:text="Go"
             app:layout_constraintLeft_toRightOf="@id/text_total_price"
             app:layout_constraintTop_toBottomOf="@id/text_quantity_desired"/>
 
