--- a/app/src/main/res/layout/planet_activity.xml
+++ b/app/src/main/res/layout/planet_activity.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:paddingRight="16dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
 
         <Button
@@ -23,6 +31,22 @@
             tools:layout_editor_absoluteX="32dp"
             tools:layout_editor_absoluteY="29dp" />
 
+        <Button
+            android:id="@+id/cargo_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cargo"
+            tools:layout_editor_absoluteX="80dp"
+            tools:layout_editor_absoluteY="29dp" />
+    </LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
 
         <TextView
             android:id="@+id/planet_label"
@@ -31,13 +55,19 @@
             android:text="Current Planet: "
             tools:layout_editor_absoluteX="60dp" />
 
-        <Button
-            android:id="@+id/cargo_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cargo"
-            tools:layout_editor_absoluteX="80dp"
-            tools:layout_editor_absoluteY="29dp" />
+    </LinearLayout>
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
+
+
+        </LinearLayout>
+
     </LinearLayout>
 
 
