Add button functionality to travel activity

--- a/app/src/main/res/layout/travel_activity.xml
+++ b/app/src/main/res/layout/travel_activity.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -32,27 +33,8 @@
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center">
-
-
-                <RadioButton android:id = "@+id/planet_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Planet 1"
-                    android:checked="true"
-                    android:onClick="onRadioButtonClicked"/>
-
-                <RadioButton android:id="@+id/planet_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Planet 2"
-                    android:onClick="onRadioButtonClicked"/>
-
-                <RadioButton android:id="@+id/planet_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Planet 3"
-                    android:onClick="onRadioButtonClicked"/>
+                android:layout_gravity="center"
+                android:id="@+id/planet_button_group">
 
             </RadioGroup>
             <TextView
@@ -61,11 +43,20 @@
                 android:layout_height="wrap_content"
 
                 android:layout_gravity="center"
-                android:text="Planet Details"
+                android:text=""
 
                 tools:layout_editor_absoluteX="163dp"
                 tools:layout_editor_absoluteY="16dp" />
+            <TextView
+                android:id="@+id/coords"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
+                android:layout_gravity="center"
+                android:text=""
+
+                tools:layout_editor_absoluteX="163dp"
+                tools:layout_editor_absoluteY="16dp" />
 
             <TextView
                 android:id="@+id/SS_map_title"
@@ -81,79 +72,8 @@
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_gravity="center">
-
-
-                <RadioButton
-                    android:id="@+id/SS_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Solar System 1" />
-
-                <RadioButton
-                    android:id="@+id/SS_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Solar System 2" />
-
-                <RadioButton
-                    android:id="@+id/SS_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Solar System 3" />
-
-                <RadioButton
-                    android:id="@+id/SS_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Solar System 4" />
-
-                <RadioButton
-                    android:id="@+id/SS_5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Solar System 5" />
-
-                <RadioButton
-                    android:id="@+id/SS_6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Solar System 6" />
-
-                <RadioButton
-                    android:id="@+id/SS_7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Solar System 7" />
-
-                <RadioButton
-                    android:id="@+id/SS_8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Solar System 8" />
-
-                <RadioButton
-                    android:id="@+id/SS_9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Solar System 9" />
-
-                <RadioButton
-                    android:id="@+id/SS_10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Solar System 10" />
+                android:layout_gravity="center"
+                android:id="@+id/solar_system_button_group">
 
             </RadioGroup>
 
