--- a/app/src/main/res/layout/travel_activity.xml
+++ b/app/src/main/res/layout/travel_activity.xml
@@ -58,7 +58,7 @@
             </RadioGroup>
 
             <Button
-                android:id="@+id/travel_button"
+                android:id="@+id/travel_here_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
