--- a/app/src/main/res/layout/planet_activity.xml
+++ b/app/src/main/res/layout/planet_activity.xml
@@ -136,8 +136,8 @@
 
             <TextView
                 android:id="@+id/quantity_tracker"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="0"
                 app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
                 app:layout_constraintLeft_toRightOf="@+id/increase_quantity_button" />
@@ -148,7 +148,8 @@
                 android:layout_height="36dp"
                 android:text="@string/minus"
                 app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
-                app:layout_constraintLeft_toRightOf="@id/quantity_tracker" />
+                app:layout_constraintLeft_toRightOf="@id/quantity_tracker"
+                android:layout_marginRight="20dp"/>
 
             <TextView
                 android:id="@+id/text_ship_max_label"
@@ -184,11 +185,25 @@
                 android:id="@+id/fuel_price_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Fuel Price: $"
+                android:text="Total Price: $"
                 tools:layout_editor_absoluteX="60dp" />
 
             <TextView
                 android:id="@+id/fuel_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0" />
+
+            <TextView
+                android:id="@+id/current_fuel_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:text="Current Fuel: "
+                tools:layout_editor_absoluteX="60dp" />
+
+            <TextView
+                android:id="@+id/current_fuel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0" />
@@ -198,7 +213,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Refuel"
-                android:layout_marginLeft="40dp" />
+                android:layout_marginLeft="20dp" />
 
 
         </LinearLayout>
