--- a/app/src/main/res/layout/police_activity.xml
+++ b/app/src/main/res/layout/police_activity.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="42dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <TextView
@@ -23,7 +24,7 @@
             android:gravity="center"
             android:text="@string/police_warning"
             android:textColor="@android:color/holo_red_dark"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/directions"
@@ -37,19 +38,26 @@
             android:id="@+id/accept_check_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/accept" />
+            android:text="@string/accept"
+            android:background="@android:color/holo_red_dark"
+            android:textColor="@android:color/white"
+            />
 
         <Button
             android:id="@+id/bribe_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/bribe" />
+            android:text="@string/bribe"
+            android:background="@android:color/holo_blue_dark"
+            android:textColor="@android:color/white"/>
 
         <Button
             android:id="@+id/flee_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/flee" />
+            android:text="@string/flee"
+            android:background="@android:color/holo_green_dark"
+            android:textColor="@android:color/white"/>
 
     </LinearLayout>
 
