--- a/app/src/main/res/layout/police_activity.xml
+++ b/app/src/main/res/layout/police_activity.xml
@@ -18,7 +18,7 @@
 
 
         <TextView
-            android:id="@+id/intro_message"
+            android:id="@+id/intro_message_police"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
