--- a/app/src/main/res/layout/planet_activity.xml
+++ b/app/src/main/res/layout/planet_activity.xml
@@ -213,7 +213,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Refuel"
-                android:layout_marginLeft="20dp" />
+                android:layout_marginLeft="16dp"
+                />
 
 
         </LinearLayout>
