--- a/app/src/main/res/layout/config.xml
+++ b/app/src/main/res/layout/config.xml
@@ -41,7 +41,7 @@
                 android:layout_marginBottom="8dp"
                 android:importantForAutofill="no"
                 android:inputType="text"
-                android:hint="@string/input_name" />
+                android:labelFor="name" />
     </LinearLayout>
 
         <TextView
