--- a/app/src/main/res/layout/market_activity.xml
+++ b/app/src/main/res/layout/market_activity.xml
@@ -54,9 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="16dp"
-        tools:layout_editor_absoluteX="37dp"
-        tools:layout_editor_absoluteY="35dp">
+        android:padding="16dp">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/marketInfoRecycler"
