--- a/app/src/main/res/layout/planet_activity.xml
+++ b/app/src/main/res/layout/planet_activity.xml
@@ -257,28 +257,30 @@
                     android:layout_height="95dp"
                     app:srcCompat="@drawable/rectangle"
                     android:visibility="invisible"
-                    />
+                    android:contentDescription="fuel bar"  />
+
                 <ImageView
                     android:id="@+id/fuelbar2"
                     android:layout_width="40dp"
                     android:layout_height="95dp"
                     app:srcCompat="@drawable/rectangle"
                     android:visibility="invisible"
-                    />
+                    android:contentDescription="fuel bar" />
+
                 <ImageView
                     android:id="@+id/fuelbar3"
                     android:layout_width="40dp"
                     android:layout_height="95dp"
                     app:srcCompat="@drawable/rectangle"
                     android:visibility="invisible"
-                    />
+                    android:contentDescription="fuel bar" />
                 <ImageView
                     android:id="@+id/fuelbar4"
                     android:layout_width="40dp"
                     android:layout_height="95dp"
                     app:srcCompat="@drawable/rectangle"
                     android:visibility="invisible"
-                    />
+                    android:contentDescription="fuel bar" />
                 <ImageView
                     android:id="@+id/fuelbar5"
                     android:layout_width="40dp"
@@ -292,14 +294,14 @@
                     android:layout_height="95dp"
                     app:srcCompat="@drawable/rectangle"
                     android:visibility="invisible"
-                    />
+                    android:contentDescription="fuel bar" />
                 <ImageView
                     android:id="@+id/fuelbar7"
                     android:layout_width="40dp"
                     android:layout_height="95dp"
                     app:srcCompat="@drawable/rectangle"
                     android:visibility="invisible"
-                    />
+                    android:contentDescription="fuel bar" />
 
             </LinearLayout>
 
