--- a/app/src/main/res/layout/pirate_activity.xml
+++ b/app/src/main/res/layout/pirate_activity.xml
@@ -2,9 +2,9 @@
 <android.support.constraint.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="0dp"
